--- a/my-app/src/App.scss
+++ b/my-app/src/App.scss
@@ -42,3 +42,59 @@ html {
 .search-icon {
   width: 16px;
 }
+
+.products-section {
+  background-color: #EDEDED;
+}
+
+.products-section-list {
+  margin: 0;
+  padding: 30px 0;
+}
+
+.list-item{
+  list-style: none;
+  background-color: white;
+  width: 70%;
+  margin: 0 auto 1px auto;
+  padding: 20px 50px 20px 0;
+  display: flex;
+}
+
+.item-img-container {
+  width: 150px;
+  padding: 0 20px;
+}
+
+.item-img-container img {
+  width: 100%;
+}
+
+.item-title {
+  font-size: 20px;
+  font-weight: 100;
+}
+
+.item-price {
+  font-size: 22px;
+  font-weight: 400;
+}
+
+.product-detail-section {
+  background-color: #EDEDED;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.product-detail-container {
+  background-color: white;
+  margin: 30px 0;
+  padding: 40px;
+  width: 1100px;
+  display: flex;
+}
+
+.product-detail-left {
+  width: 80%;
+}
