--- a/my-app/src/App.scss
+++ b/my-app/src/App.scss
@@ -1,32 +1,11 @@
+$navHeaderBackground: #ffe600;
+$navHeaderSearchBtnColor: #EBECEE;
+$backgroundGray: #EDEDED;
+$buyButtonBackground: #3483fa;
+$buyButtonColor: #ffff;
+$productDetailContainerBackground: #ffff;
+
 html {
   margin: 0;
   padding: 0;
-}
-
-.products-section {
-  background-color: #EDEDED;
-}
-
-.products-section-list {
-  margin: 0;
-  padding: 30px 0;
-}
-
-.product-detail-section {
-  background-color: #EDEDED;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-.product-detail-container {
-  background-color: white;
-  margin: 30px 0;
-  padding: 40px;
-  width: 1100px;
-  display: flex;
-}
-
-.product-detail-left {
-  width: 80%;
 }
