--- a/my-app/src/components/ProductDetail/ProductDetail.scss
+++ b/my-app/src/components/ProductDetail/ProductDetail.scss
@@ -1,8 +1,29 @@
+@use '../../App' as variables;
+
+.product-detail-section {
+    background-color: variables.$backgroundGray;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+  
+.detail-container {
+    background-color: variables.$productDetailContainerBackground;
+    margin: 30px 0;
+    padding: 40px;
+    width: 1100px;
+    display: flex;
+}
+  
+.detail-container__left-column {
+    width: 80%;
+}
+  
 .buy-button {
-    background-color: #3483fa;
+    background-color: variables.$buyButtonBackground;
     border-color: transparent;
     cursor: pointer;
-    color: #fff;
+    color: variables.$buyButtonColor;
     border-radius: 6px;
     display: inline-block;
     font-family: Proxima Nova,-apple-system,Roboto,Arial,sans-serif;
