changing product card lik component style

--- a/my-app/src/App.scss
+++ b/my-app/src/App.scss
@@ -1,6 +1,7 @@
 $navHeaderBackground: #ffe600;
 $navHeaderSearchBtnColor: #EBECEE;
 $backgroundGray: #EDEDED;
+$fontColorBlack: #000;
 $buyButtonBackground: #3483fa;
 $buyButtonColor: #ffff;
 $productDetailContainerBackground: #ffff;
