--- a/my-app/src/components/ProductDetail/ProductDetail.scss
+++ b/my-app/src/components/ProductDetail/ProductDetail.scss
@@ -5,8 +5,19 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 100vh;
 }
-  
+
+.loading-icon {
+    width: 120px;
+    height: 120px;
+    margin-top: 120px;
+}
+
+.loading-icon__image {
+    width: 100%;
+}
+
 .detail-container {
     background-color: variables.$productDetailContainerBackground;
     margin: 30px 0;
@@ -26,7 +37,6 @@
     color: variables.$buyButtonColor;
     border-radius: 6px;
     display: inline-block;
-    font-family: Proxima Nova,-apple-system,Roboto,Arial,sans-serif;
     font-size: 16px;
     font-weight: 600;
     width: 100%;
